--- a/index.htm
+++ b/index.htm
@@ -21,7 +21,7 @@
           <!-- card-1 -->
           <div class="container col-xxl-6 col-xl-6 col-6 bg text-light p-5  ">
             <form action="">
-                <h2 class="text-capitalize fw-bold fs-5  gk">sign in to your account</h2>
+                <!-- <h2 class="text-capitalize fw-bold fs-5  gk">sign in to your account</h2> -->
                 <p id="p1">let's sign in to your account to gat start </p>
                 <label  class="pt-4 form-label">Email address</label>
         <div class="container ">
